--- a/tools/style.css
+++ b/tools/style.css
@@ -15,7 +15,7 @@ margin:0;
 padding:0;
 color: #fff;
 text-align: center;
-background: url(../images/bg1.jpg) right bottom no-repeat;
+background: url(../images/bga.jpg) right bottom no-repeat;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
